--- a/postcards/src/components/index.css
+++ b/postcards/src/components/index.css
@@ -47,8 +47,8 @@ html, body {
     object-fit: cover;
     overflow: hidden;
     max-width: 100%;
-    height: 175px;
-    width: 165px;
+    height: 190px;
+    width: 205px;
     border-radius: 10px;
   }
   .navbar {
@@ -63,11 +63,12 @@ html, body {
   }
   .leftDeck {
     float: left;
-    margin-top: 50px;
+    margin-top: 70px;
+    margin-left: 20px;
   }
   .rightDeck {
     float: right;
-    margin-top: 50px;
+    margin-top: 70px;
     
   }
   .message-section {
@@ -176,7 +177,7 @@ html, body {
   }
   
   .caption-container {
-    padding-top: 5px;
+    padding-top: 10px;
     overflow: scroll;
     width: 200px;
     height: 50px;
@@ -211,8 +212,8 @@ html, body {
   transition: transform 1000ms ease-in-out; */
 	/* opacity: 0;
   transition: opacity 100ms ease-out; */
-	transform:   translate(-345px,0);
-	transform: translate3d(-345px,0,0);
+	transform:   translate(-325px,0);
+	transform: translate3d(-325px,0,0);
 }
 
 .leftTransition-enter {
@@ -244,8 +245,8 @@ html, body {
   transition: transform 1000ms ease-in-out; */
 	/* opacity: 0;
   transition: opacity 3000ms ease-out; */
-	transform:   translate(345px,0);
-	transform: translate3d(345px,0,0);
+	transform:   translate(325px,0);
+	transform: translate3d(325px,0,0);
 }
 .handle {
   float: left;
@@ -284,13 +285,13 @@ html, body {
       object-fit: cover;
       overflow: hidden;
       max-width: 100%;
-      height: 305px;
+      height: 325px;
       width: 325px;
       border-radius: 10px;
     }
     .message-content {
       width: 325px;
-      height: 325px;
+      height: 365px;
       padding-top: 20px;
       text-align: center;
 
