--- a/postcards/src/components/index.css
+++ b/postcards/src/components/index.css
@@ -15,8 +15,23 @@ html, body {
   padding-right: 15px;
   margin-right: auto;
 }
+.navbar-nav>li>a {
+  line-height: inherit;
+}
 
 @media (min-width: 300px) {
+  .welcome-content {
+    text-align: center;
+    margin: auto;
+    position: absolute;
+ 
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  max-width: 600px;
+  max-height: 300px;
+  }
   .message-card {
     position: relative;
   }
@@ -61,6 +76,12 @@ html, body {
   .nav>li>a {
     display: inline;
   }
+  .sign-out {
+  display: inline;
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
   .leftDeck {
     float: left;
     margin-top: 70px;
@@ -74,7 +95,7 @@ html, body {
   .message-section {
     text-align: center;
     height: 100%;
-    padding-top: 20px;
+    padding-top: 0px;
   }
   .message-buttons {
     bottom: 0;
@@ -118,6 +139,8 @@ html, body {
     background-color: #006699;
     border-radius: 5px;
     margin-top: 5px;
+    margin-bottom: 5px;
+
   }
   
   .previewComponent {
@@ -259,6 +282,7 @@ html, body {
   margin: auto;
   padding-top: 50px;
   border-radius: 10px;
+  
 }
 .avatar-with-text {
   height: 40px;
@@ -283,20 +307,27 @@ html, body {
       object-fit: cover;
       overflow: hidden;
       max-width: 100%;
-      height: 325px;
-      width: 325px;
+      height: 345px;
+      width: 360px;
       border-radius: 10px;
     }
     .message-content {
-      width: 325px;
+      width: 360px;
       height: 365px;
       padding-top: 20px;
       text-align: center;
 
     }
+    .message-section{
+      margin-top: 20px;
+    }
     .navbar {
-      font-size: inherit;
+      font-size: 15px;
       display: inherit;
+    }
+    .navbar-brand {
+      width: 65px;
+      height: 65px;
     }
     .nav>li {
       display: inherit;
@@ -311,6 +342,9 @@ html, body {
     .rightDeck {
       margin: 0;
     }
+    .submitButton{
+      padding: 5px;
+    }
     .message-buttons {
       bottom: 0px;
       width: 500px;
@@ -319,7 +353,7 @@ html, body {
       text-align: center;
       margin: auto;
       background-color: white;
-      height: 50px;
+      height: 60px;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
       box-shadow: 10px 5px #006699;
@@ -332,7 +366,7 @@ html, body {
       padding-top: 20px;
       font-family: inherit;
       color: inherit;
-      font-size: 13px;
+      font-size: 15px;
       /* border-radius: 20px; */
     }
     .submitButton {
@@ -345,7 +379,7 @@ html, body {
     .previewComponent {
       padding: 20px;
       border: none;
-      font-size: 10px;
+      font-size: 15px;
       width: 290px;
     }
     
@@ -367,7 +401,7 @@ html, body {
     .bm-icon {
       background-color: white;
       text-orientation: sideways;
-      font-size: 12px;
+      font-size: 14px;
       border-top-right-radius: 20px;
       border-bottom-right-radius: 20px;
       box-shadow: 10px 5px #006699;
@@ -378,7 +412,7 @@ html, body {
       width: 80px;
       height: 200px;
       left: 0px;
-      top: 100px;
+      top: 300px;
     
     }
   
@@ -397,7 +431,9 @@ html, body {
     }
     
     .caption-container {
-      padding-top: 25px;
+      padding-top: 15px;
+      width: 200px;
+      height: 65px;
     }
 
     .time {
@@ -414,34 +450,55 @@ html, body {
       transition: transform 1000ms ease-in-out; */
       /* opacity: 0;
       transition: opacity 100ms ease-out; */
-      transform:   translate(-500px,0);
-      transform: translate3d(-500px,0,0);
+      transform:   translate(-587px,0);
+      transform: translate3d(-587px,0,0);
     }
     .leftTransition-leave.leftTransition-leave-active {
       /* transform: translate(-100%);
       transition: transform 1000ms ease-in-out; */
       /* opacity: 0;
       transition: opacity 3000ms ease-out; */
-      transform:   translate(550px,0);
-      transform: translate3d(550px,0,0);
+      transform:   translate(587px,0);
+      transform: translate3d(587px,0,0);
     }
     .message {
       background-color: #e6f2ff;
       font-size: 30px;
       margin: auto;
+      margin-top: 15px;
       padding-top: 50px;
       border-radius: 10px;
+      height: 345px;
+      
     }
     .avatar-with-text {
       height: 60px;
       width: 60px;
       margin: auto;
-      margin-top: 15px;
+      margin-top: 10px;
     }
     .handle-with-text {
       margin-top: 10px;
     }
-}
+    .message-section {
+      text-align: center;
+      height: 100%;
+      padding-top: 90px;
+    }
+    .handle {
+      float: left;
+      margin: auto;
+      padding-left: 0px;
+    }
+    .img-preview {
+      object-fit: cover;
+      overflow: hidden;
+      max-width: 100%;
+      height: 200px;
+      width: 200px;
+    }
+  }
+
 
 @media (min-width: 992px) {
     .main-container { 
@@ -470,7 +527,7 @@ html, body {
       padding: 20px;
       border: none;
       font-size: 14px;
-      width: 320px;
+      width: 350px;
     }
 
     
@@ -480,19 +537,19 @@ html, body {
       height: 100% !important;
     }
     .dropdown-menu{
-      width: 340px;
+      width: 360px;
     }
     .img-preview {
       object-fit: cover;
       overflow: hidden;
       max-width: 100%;
-      height: 200px;
-      width: 200px;
+      height: 310px;
+      width: 310px;
     }
     .bm-icon {
       background-color: white;
       text-orientation: sideways;
-      font-size: 14px;
+      font-size: 16px;
       border-top-right-radius: 20px;
       border-bottom-right-radius: 20px;
       box-shadow: 10px 5px #006699;
@@ -524,7 +581,7 @@ html, body {
     .caption-container {
       padding-top: 30px;
       width: 440px;
-      height: 95px;
+      height: 90px;
     }
 
     .time {
@@ -551,12 +608,11 @@ html, body {
     .handle {
       float: left;
       margin: auto;
-      
-      font-size: 16px;
+      font-size: 15px;
     }
     .message-buttons {
       bottom: 0px;
-      width: 640px;
+      width: 700px;
       position: fixed;
       z-index:  150;
       text-align: center;
@@ -582,16 +638,137 @@ html, body {
       height: 60px;
       width: 60px;
       margin: auto;
-      margin-top: 15px;
+      margin-top: 10px;
     }
     .handle-with-text {
       margin-top: 10px;
       font-size: 16px;
     }
+    .message-section {
+      margin-top: 12px;
+      padding-top: 0px;
+    }
 
 }
 @media (min-width: 1200px) {
     .main-container { width: 1170px; } 
+
+    .navbar {
+      font-size: 20px;
+      display: inherit;
+    }
+    .item {
+      width: 560px !important;
+      height: 680px !important;
+    }
+    .message-img {
+      object-fit: cover;
+      overflow: hidden;
+      max-width: 100%;
+      height: 490px;
+      width: 520px;
+      border-radius: 10px;
+    }
+    .message-content {
+      width: 520px;
+      height: 520px;
+      padding-top: 20px;
+      text-align: center;
+      
+    }
+    .message{
+      height: 480px;
+    }
+    .message-buttons {
+      bottom: 0px;
+      width: 1000px;
+      position: fixed;
+      z-index:  150;
+      text-align: center;
+      margin: auto;
+      background-color: white;
+      height: 70px;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      box-shadow: 10px 5px #006699;
+      padding-left: 45px;
+      padding-right: 45px;
+    }
+    .btn-default {
+      font-size: 22px;
+    }
+    .bm-icon {
+      background-color: white;
+      text-orientation: sideways;
+      font-size: 20px;
+      border-top-right-radius: 20px;
+      border-bottom-right-radius: 20px;
+      box-shadow: 10px 5px #006699;
+      
+    }
+    .bm-burger-button {
+      position: fixed;
+      width: 100px;
+      height: 260px;
+      left: 0px;
+      top: 100px;
+    
+    }
+    .message-section{
+      padding-top: 50px;
+    }
+    .time {
+      font-size: 20px;
+    }
+    .avatar-with-cap {
+      height: 70px;
+      width: 70px;
+      float: left;
+      margin-right: 10px;
+    
+    }
+    
+    .caption {
+      text-align: left;
+      padding: 20px;
+      font-size: 18px;
+    }
+    
+    .caption-container {
+      padding-top: 5px;
+      width: 440px;
+      height: 80px;
+    }
+    .handle{
+      font-size: 16px;
+    }
+    .avatar-with-text {
+      height: 70px;
+      width: 70px;
+      margin: auto;
+      margin-top: 20px;
+      margin-bottom: 5px;
+    }
+    .handle-with-text {
+      margin-top: 20px;
+      font-size: 16px;
+    }
+    .rightTransition-leave.rightTransition-leave-active {
+      /* transform: translate(-100%);
+      transition: transform 1000ms ease-in-out; */
+      /* opacity: 0;
+      transition: opacity 100ms ease-out; */
+      transform:   translate(-761px,0);
+      transform: translate3d(-761px,0,0);
+    }
+    .leftTransition-leave.leftTransition-leave-active {
+      /* transform: translate(-100%);
+      transition: transform 1000ms ease-in-out; */
+      /* opacity: 0;
+      transition: opacity 3000ms ease-out; */
+      transform:   translate(761px,0);
+      transform: translate3d(761px,0,0);
+    }
 }
 
 button.list-group-item:active {
@@ -635,11 +812,7 @@ button.list-group-item {
   padding-bottom: 10px;
 }
 
-.sign-out {
-  display: inline;
-  padding-top: 15px;
-  padding-left: 15px;
-}
+
 
 
 /* MESSAGES COMPONENT: CARD ANIMATIONS */
@@ -652,7 +825,7 @@ button.list-group-item {
 }
 .rightTransition-enter.rightTransition-enter-active {
 	opacity: 1;
-  transition: opacity 100ms ease-out;
+  transition: opacity 30ms ease-out;
 	/* transition: opacity 1s ease;
 	transform:   translate(0,0);
 	transform: translate3d(0,0,0);
@@ -685,7 +858,7 @@ button.list-group-item {
 }
 .leftTransition-enter.leftTransition-enter-active {
 	opacity: 1;
-  transition: opacity 100ms ease-out;
+  transition: opacity 30ms ease-out;
 	/* transition: opacity 1s ease;
 	transform:   translate(0,0);
 	transform: translate3d(0,0,0);
