Toast; spacing; landing

--- a/postcards/src/components/index.css
+++ b/postcards/src/components/index.css
@@ -23,6 +23,7 @@ html, body {
   .welcome-content {
     text-align: center;
     margin: auto;
+    margin-top: 190px;
     position: absolute;
 
   top: 0;
